# non-myopic_bo

./: -(1.4 - 3.0 * X[0]) * np.sin(18.0 * X[0])_5_1_1.csv  -(1.4 - 3.0 * X[0]) * np.sin(18.0 * X[0])_5_2_2.csv  -(1.4 - 3.0 * X[0]) * np.sin(18.0 * X[0])_5_3_3.csv  -(1.4 - 3.0 * X[0]) * np.sin(18.0 * X[0])_5_3_without_rl.csv  -(1.4 - 3.0 * X[0]) * np.sin(18.0 * X[0])_5_4_without_rl.csv  -(1.4 - 3.0 * X[0]) * np.sin(18.0 * X[0])_5_5.csv  -(1.4 - 3.0 * X[0]) * np.sin(18.0 * X[0])_5_5_3.csv  .coverage  .gitignore  2_X[0] ** 2 + X[1] ** 2 -1_5_1.csv  8_mod_branin_5_1.csv  README.md  pyproject.toml
arch_benchmark_2022/: Autotrans_shift.slxc  pyproject.toml  res_1d.py  test_1d.py
arch_benchmark_2022/ARCHCOMP2022_PartX/AT1_budget_2000_10_reps/: AT1_budget_2000_10_reps_seed_1360466708.pkl  AT1_budget_2000_10_reps_seed_1679802727.pkl  AT1_budget_2000_10_reps_seed_2760304911.pkl  AT1_budget_2000_10_reps_seed_2904491693.pkl  AT1_budget_2000_10_reps_seed_3003105692.pkl  AT1_budget_2000_10_reps_seed_3387213021.pkl  AT1_budget_2000_10_reps_seed_3424658561.pkl  AT1_budget_2000_10_reps_seed_4245388044.pkl  AT1_budget_2000_10_reps_seed_876933080.pkl  AT1_budget_2000_10_reps_seed_976400780.pkl
arch_benchmark_2022/ARCHCOMP2022_PartX/AT2_budget_2000_10_reps/: AT2_budget_2000_10_reps_seed_3003105692.pkl  (+1 more)
arch_benchmark_2022/benchmarks/: __main__.py
arch_benchmark_2022/benchmarks_UR/: __main__.py  generate_results.py  run_AT1.py
arch_benchmark_2022/benchmarks_instance_2/: __main__.py
arch_benchmark_2022/benchmarks_instance_2_UR/: __main__.py
bo/: __init__.py  behavior.py  (+2 more)
(+144 files in other folders)
