[tool.poetry]
name = "arch-benchmarks2021"
version = "0.1.5"
description = ""
authors = ["Tanmay Khandait"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.20.3"
scipy = "^1.6.3"
aerobench = {git = "https://github.com/qthibeault/aerobenchvvpython.git"}
psy-taliro = {git = "https://gitlab.com/sbtg/psy-taliro", rev = "v1.0.0b6"}
rtamt = {git = "https://github.com/nickovic/rtamt.git", rev = "c0fb9e6"}
bo = {path = "../bo"}
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pandas = "^1.3.1"
tltk-mtl = "^0.0.27"
plotly = "^5.3.1"
kaleido = "0.2.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
